# reterm

./: .envrc  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.txt  pyproject.toml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: pypi-publish.yml  unittests.yml
docs/: changelog.txt
docs/context/ncurses/: 01. History  02. Archiitecture  03. Gotchas
docs/design/: intro.txt  planning.txt
docs/design/features/: addressing.txt  declarative.txt  event-handling.txt  keypress-handling.txt  logging.txt  text.renderring.txt  ui-toolkit.txt
docs/design/features/declarative/: colors.txt  components.txt  general.txt  handlers.txt  keybindings.txt
docs/development/: 01-Readme.txt  development.txt  phase-01-guide.txt
docs/users/: intro.txt
docs/users/features/: controling.txt  layout.txt
docs/what/: intro.txt
docs/what/reactive/: 01. Intro  02.react and ncurses
examples/: __init__.py  phase_one_advanced.py  phase_one_simple.py  runner.py
reterm/: __init__.py  component.py  constants.py  container.py  events.py  state.py
tests/: conftest.py  fixtures.py  test_component.py  test_container.py  test_events.py  test_state.py
