[project]
name = "reterm"
version = "0.1.2"
description = "A minimalist document bundler designed for stitching hints, reminders and short docs."
authors = [
    {name = "Arthur Debert", email = "arthur@debert.xyz"}
]
readme = "README.txt"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "pathspec>=0.12.0",
    "blinker (>=1.9.0,<2.0.0)"
]
keywords = ["documentation", "bundler", "minimalist", "text", "prompts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/arthur-debert/reterm/"
Repository = "https://github.com/arthur-debert/reterm/"
"Bug Tracker" = "https://github.com/arthur-debert/reterm/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "reterm"}]
include = ["bin/**/*", "README.txt", "LICENSE"]
exclude = [
    "docs/**/*",
    "samples/**/*",
    "tests/**/*",
    "tmp/**/*",
    "notes/**/*",
    "drafts/**/*",
    ".vscode/**/*",
    ".VSCodeCounter/**/*",
    ".coverage",
    ".coverage.*",
    "**/*.pyc",
    "**/__pycache__/**",
    "**/*.log"
]

[tool.virtualenvs]
in-project = true
create = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
black = "^25.1.0"
pytest-cov = "^4.1.0"
isort = "^6.0.1"
autoflake = "^2.3.1"
pytest = "^8.3.5"
twine = "^6.1.0"
jinja2 = "^3.1.6"

# do not use: [tool.poetry.scripts]

[tool.poetry.dependencies]
pathspec = "^0.12.1"
